--- a/views/lexicon/includes/notifications.html.twig
+++ b/views/lexicon/includes/notifications.html.twig
@@ -36,7 +36,7 @@
 
                         <p>We've updated our user manual to feature our new and improved user interface. If you need a copy, drop us a message and we'll be happy to send one over.</p>
 
-                        <p><i class="icon-file-text-alt"></i> <a href="#path-to-release-notes">View detailed release notes</a></p>
+                        <p><i class="icon-file-text-alt" aria-hidden="true"></i> <a href="#path-to-release-notes">View detailed release notes</a></p>
                     </div>
                 </div>
             </div>
@@ -64,7 +64,7 @@
 
                         <p>We've updated our user manual to feature our new and improved user interface. If you need a copy, drop us a message and we'll be happy to send one over.</p>
 
-                        <p><i class="icon-file-text-alt"></i> <a href="#path-to-release-notes">View detailed release notes</a></p>
+                        <p><i class="icon-file-text-alt" aria-hidden="true"></i> <a href="#path-to-release-notes">View detailed release notes</a></p>
                     </div>
                 </div>
             </div>
@@ -92,7 +92,7 @@
 
                         <p>We've updated our user manual to feature our new and improved user interface. If you need a copy, drop us a message and we'll be happy to send one over.</p>
 
-                        <p><i class="icon-file-text-alt"></i> <a href="#path-to-release-notes">View detailed release notes</a></p>
+                        <p><i class="icon-file-text-alt" aria-hidden="true"></i> <a href="#path-to-release-notes">View detailed release notes</a></p>
                     </div>
                 </div>
             </div>
@@ -120,7 +120,7 @@
 
                         <p>We've updated our user manual to feature our new and improved user interface. If you need a copy, drop us a message and we'll be happy to send one over.</p>
 
-                        <p><i class="icon-file-text-alt"></i> <a href="#path-to-release-notes">View detailed release notes</a></p>
+                        <p><i class="icon-file-text-alt" aria-hidden="true"></i> <a href="#path-to-release-notes">View detailed release notes</a></p>
                     </div>
                 </div>
             </div>
@@ -148,7 +148,7 @@
 
                         <p>We've updated our user manual to feature our new and improved user interface. If you need a copy, drop us a message and we'll be happy to send one over.</p>
 
-                        <p><i class="icon-file-text-alt"></i> <a href="#path-to-release-notes">View detailed release notes</a></p>
+                        <p><i class="icon-file-text-alt" aria-hidden="true"></i> <a href="#path-to-release-notes">View detailed release notes</a></p>
                     </div>
                 </div>
             </div>
@@ -176,7 +176,7 @@
 
                         <p>We've updated our user manual to feature our new and improved user interface. If you need a copy, drop us a message and we'll be happy to send one over.</p>
 
-                        <p><i class="icon-file-text-alt"></i> <a href="#path-to-release-notes">View detailed release notes</a></p>
+                        <p><i class="icon-file-text-alt" aria-hidden="true"></i> <a href="#path-to-release-notes">View detailed release notes</a></p>
                     </div>
                 </div>
             </div>
