--- a/views/lexicon/tables/tablex.html.twig
+++ b/views/lexicon/tables/tablex.html.twig
@@ -5,14 +5,14 @@
     <table class="table table--full table--horizontal">
         <thead>
             <tr>
-                <th><a href="#name">Name</a></th>
-                <th><a href="#ip">IP</a></th>
-                <th><a href="#status">Status</a></th>
-                <th><a href="#uptime">Uptime</a></th>
-                <th><a href="#image">Image</a></th>
-                <th><a href="#ram">RAM</a></th>
-                <th class="centered"><a href="#cpus">CPUs</a></th>
-                <th><a href="#actions">Actions</a></th>
+                <th>Name</th>
+                <th>IP</th>
+                <th>Status</th>
+                <th>Uptime</th>
+                <th>Image</th>
+                <th>RAM</th>
+                <th class="centered">CPUs</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
