--- a/stylesheets/_component.tab-help.scss
+++ b/stylesheets/_component.tab-help.scss
@@ -87,7 +87,7 @@ $nav-color-dark:  darken(color(jadu-blue, dark), 5%) !default;
 .close-page-help {
     background-color: transparent;
     border: 0;
-    font-size: 1.5em;
+    font-size: $font-size-xlarge;
     margin-bottom: 10px;
     position: absolute;
     right: 10px;
