--- a/views/lexicon/tables/datatable-empty.html.twig
+++ b/views/lexicon/tables/datatable-empty.html.twig
@@ -6,14 +6,14 @@
             <tr>
                 <td class="table-responsive"></td>
                 <td class="table-selection"></td>
-                <th><a href="#">Name</a></th>
-                <th><a href="#">IP</a></th>
-                <th><a href="#">Status</a></th>
-                <th><a href="#">Uptime</a></th>
-                <th><a href="#">Image</a></th>
-                <th><a href="#">RAM</a></th>
-                <th class="centered"><a href="#">CPUs</a></th>
-                <th><a href="#">Actions</a></th>
+                <th>Name</th>
+                <th>IP</th>
+                <th>Status</th>
+                <th>Uptime</th>
+                <th>Image</th>
+                <th>RAM</th>
+                <th class="centered">CPUs</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
