--- a/views/pulsar/v2/helpers/nav.html.twig
+++ b/views/pulsar/v2/helpers/nav.html.twig
@@ -6,7 +6,7 @@
 <nav class="nav-main" aria-label="Primary" id="aria-main-nav">
     <div class="nav-primary t-nav-primary">
         <a href="{{ options.brand_link|default('/') }}" class="jadu-branding">
-            <span class="jadu-logomark">Return to home</span>
+            <span class="jadu-logomark"><span class="hide">Return to home</span></span>
             <span class="jadu-wordmark">Jadu</span>
         </a>
         <ul class="nav-items">
@@ -22,7 +22,7 @@
 
     <div class="nav-secondary t-nav-secondary" id="aria-secondary-nav">
 
-        <button href="#close" class="nav-close" data-nav-action="close">{{ html.icon('remove', { 'label': 'Close expanded menu' }) }}</button>
+        <button class="nav-close" data-nav-action="close">{{ html.icon('remove', { 'label': 'Close expanded menu' }) }}</button>
 
         {% if options.data is iterable %}
             {% for options in options.data %}
