--- a/views/lexicon/patterns/rules/one.html.twig
+++ b/views/lexicon/patterns/rules/one.html.twig
@@ -79,7 +79,7 @@
             {% for i in 0..1 %}
             <tr>
                 <td class="table-responsive">
-                    {{ html.icon('plus-sign', { 'class': 'table-child-toggle' }) }}
+                    {{ html.button({ 'label': html.icon('plus-sign', { 'label': 'Expand', 'class': 'table-child-toggle' }), 'class': 'btn--naked'}) }}
                 </td>
                 <td class="centered">{{ html.status('active') }}</td>
                 <td><a href="#">Create green waste case</a></td>
@@ -88,7 +88,7 @@
 
             <tr>
                 <td class="table-responsive">
-                    {{ html.icon('plus-sign', { 'class': 'table-child-toggle' }) }}
+                    {{ html.button({ 'label': html.icon('plus-sign', { 'label': 'Expand', 'class': 'table-child-toggle' }), 'class': 'btn--naked'}) }}
                 </td>
                 <td class="centered">{{ html.status('inactive') }}</td>
                 <td><a href="#">Create brown waste case</a></td>
