--- a/views/lexicon/tables.html.twig
+++ b/views/lexicon/tables.html.twig
@@ -38,7 +38,8 @@
         {
           "id"    : "datatable",
           "label" : "DataTable",
-          "src"   : tab_datatable
+          "src"   : tab_datatable,
+          'active': 'true'
         },
         {
           "id"    : "datatable-empty",
@@ -68,8 +69,7 @@
         {
           "id"    : "datatablex",
           "label" : "Horizontal Datatable",
-          "src"   : tab_datatablex,
-          'active': 'true'
+          "src"   : tab_datatablex
         }
     ]
 %}
