--- a/views/lexicon/tables/form-tables.html.twig
+++ b/views/lexicon/tables/form-tables.html.twig
@@ -72,7 +72,7 @@
                 <tbody>
                     <tr>
                         <td class="table-responsive">
-                            {{ html.icon('plus-sign', { 'class': 'table-child-toggle' }) }}
+                            {{ html.button({ 'label': html.icon('plus-sign', { 'label': 'Expand', 'class': 'table-child-toggle' }), 'class': 'btn--naked'}) }}
                         </td>
                         <td class="table-selection">
                             {{ html.icon('unchecked', { 'class': 'table-row-select js-select' }) }}
@@ -82,7 +82,7 @@
                     </tr>
                     <tr>
                         <td class="table-responsive">
-                            {{ html.icon('plus-sign', { 'class': 'table-child-toggle' }) }}
+                            {{ html.button({ 'label': html.icon('plus-sign', { 'label': 'Expand', 'class': 'table-child-toggle' }), 'class': 'btn--naked'}) }}
                         </td>
                         <td class="table-selection">
                             {{ html.icon('unchecked', { 'class': 'table-row-select js-select' }) }}
@@ -92,7 +92,7 @@
                     </tr>
                     <tr>
                         <td class="table-responsive">
-                            {{ html.icon('plus-sign', { 'class': 'table-child-toggle' }) }}
+                            {{ html.button({ 'label': html.icon('plus-sign', { 'label': 'Expand', 'class': 'table-child-toggle' }), 'class': 'btn--naked'}) }}
                         </td>
                         <td class="table-selection">
                             {{ html.icon('unchecked', { 'class': 'table-row-select js-select' }) }}
