--- a/views/playground/xfp-rules/templates.html.twig
+++ b/views/playground/xfp-rules/templates.html.twig
@@ -53,7 +53,7 @@
         <tbody>
             <tr>
                 <td class="table-responsive">
-                    {{ html.icon('plus-sign', { 'class': 'table-child-toggle' }) }}
+                    {{ html.button({ 'label': html.icon('plus-sign', { 'label': 'Expand', 'class': 'table-child-toggle' }), 'class': 'btn--naked'}) }}
                 </td>
                 <td><a data-toggle="modal" href="#edit-template">New green waste case</a></td>
                 <td>Paybridge</td>
@@ -73,7 +73,7 @@
 
             <tr>
                 <td class="table-responsive">
-                    {{ html.icon('plus-sign', { 'class': 'table-child-toggle' }) }}
+                    {{ html.button({ 'label': html.icon('plus-sign', { 'label': 'Expand', 'class': 'table-child-toggle' }), 'class': 'btn--naked'}) }}
                 </td>
                 <td><a data-toggle="modal" href="#edit-template">New green waste case</a></td>
                 <td>Paybridge</td>
@@ -93,7 +93,7 @@
 
             <tr>
                 <td class="table-responsive">
-                    {{ html.icon('plus-sign', { 'class': 'table-child-toggle' }) }}
+                    {{ html.button({ 'label': html.icon('plus-sign', { 'label': 'Expand', 'class': 'table-child-toggle' }), 'class': 'btn--naked'}) }}
                 </td>
                 <td><a data-toggle="modal" href="#edit-template">New green waste case</a></td>
                 <td>Paybridge</td>
