Add disabled column sort example

--- a/views/lexicon/tables/datatablex.html.twig
+++ b/views/lexicon/tables/datatablex.html.twig
@@ -29,7 +29,7 @@
 %}
 
 {% block tab_content %}
-    <table class="table datatable table--full table--horizontal" data-order='[[ 3, "desc" ]]'>
+    <table class="table datatable table--full table--horizontal" data-order='[[ 2, "desc" ]]'>
         <thead>
             <tr>
                 <th class="table-selection">
@@ -37,7 +37,7 @@
                 </th>
                 <th>Name</th>
                 <th>Created</th>
-                <th>IP</th>
+                <th data-orderable="false">IP</th>
                 <th>Status</th>
                 <th>Uptime</th>
                 <th>Image</th>
