--- a/stylesheets/_component.tables.scss
+++ b/stylesheets/_component.tables.scss
@@ -80,7 +80,8 @@
             }
         }
 
-        &.shrink-to-fit {
+        &.shrink-to-fit,
+        &.u-shrink-to-fit {
             @include respond-min($screen-tablet) {
                 width: 1px;
             }
