Revert "Quick docs update for datatable"
This reverts commit 72c8f74b38fe7b7d74d6e857642cd6d69b0ab8d3.

--- a/stylesheets/_component.tables.scss
+++ b/stylesheets/_component.tables.scss
@@ -80,8 +80,7 @@
             }
         }
 
-        &.shrink-to-fit,
-        &.u-shrink-to-fit {
+        &.shrink-to-fit {
             @include respond-min($screen-tablet) {
                 width: 1px;
             }
