--- a/views/playground/common-list/index.html.twig
+++ b/views/playground/common-list/index.html.twig
@@ -5,21 +5,13 @@
 {% set tab %}
     {% include 'playground/common-list/tab.html.twig' %}
 {% endset %}
-{% set table %}
-    {% include 'playground/common-list/table.html.twig' %}
-{% endset %}
 
 {%
     set tabs_content = [
         {
           "id"    : "list",
           "label" : "Tab Title",
-          "src"   : tab
-        },
-        {
-          "id"    : "table",
-          "label" : "Table Helper",
-          "src"   : table,
+          "src"   : tab,
           "active": true
         }
     ]
