--- a/views/lexicon/tables/basic-scrolling.html.twig
+++ b/views/lexicon/tables/basic-scrolling.html.twig
@@ -5,7 +5,7 @@
     <table class="table table--full table--horizontal">
         <thead>
             <tr>
-                <th><a href="#">XName</a></th>
+                <th><a href="#">Name</a></th>
                 <th><a href="#">IP</a></th>
                 <th><a href="#">Status</a></th>
                 <th><a href="#">Uptime</a></th>
