Stop DT sorting arrows breaking onto new lines when in responsive mode

--- a/stylesheets/_component.datatables.scss
+++ b/stylesheets/_component.datatables.scss
@@ -75,6 +75,8 @@ a.dt-button {
     // scss-lint:disable SelectorFormat
     td,
     th {
+        white-space: nowrap;
+
         &.sorting:hover,
         &.sorting_asc:hover,
         &.sorting_desc:hover {
