--- a/views/playground/workflow-comments/test-04/index.html.twig
+++ b/views/playground/workflow-comments/test-04/index.html.twig
@@ -40,6 +40,18 @@
             "class": "",
             "href": "/app/app.php/playground/workflow-comments/test-05/index.html.twig",
             "icon": "folder"
+        },
+        "6": {
+            "label": "Final Editor's View",
+            "class": "",
+            "href": "/app/app.php/playground/workflow-comments/final-editor/index.html.twig",
+            "icon": "folder"
+        },
+        "7": {
+            "label": "Final Approver's View",
+            "class": "",
+            "href": "/app/app.php/playground/workflow-comments/final-approver/index.html.twig",
+            "icon": "folder"
         }
     }
 %}
